--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gulp-jsfy",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "description": "css to js (append style element)",
   "main": "index.coffee",
   "scripts": {
@@ -15,6 +15,7 @@
     "async": "^0.9.0",
     "coffee-script": "^1.8.0",
     "mime": "^1.2.11",
+    "stylus": "^0.49.3",
     "through": "^2.3.6"
   },
   "devDependencies": {
