--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "gulp-jsfy",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "css to js (append link element)",
-  "main": "index.coffee",
+  "main": "src/index.js",
   "scripts": {
     "start": "npm install && gulp",
     "test": "npm install && gulp test"
