--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "gulp-jsfy",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "description": "css to js (append link element)",
-  "main": "src/index.js",
+  "main": "index.js",
   "scripts": {
     "start": "npm install && gulp",
-    "test": "npm install && gulp test"
+    "test": "gulp test"
   },
   "keywords": [
     "gulpplugin",
