--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,13 @@
+# quick boot options
+sudo: false
+cache:
+  directories:
+    - node_modules
+
+# language options
 language: node_js
 node_js:
-  - iojs
-  - 0.12
-  - 0.11
-  - 0.10
-script: 'npm test'
+- iojs
+- '0.12'
+- '0.11'
+- '0.10'
