--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,24 @@
-# quick boot options
+# Quick boot options
 sudo: false
 cache:
   directories:
     - node_modules
 
-# language options
+# Ignore version tags
+branches:
+  except:
+    - /^v[0-9]/
+
+# Language options
 language: node_js
 node_js:
-- '0.10'
+  - '0.12'
+
+# Npm publish options
+before_deploy:
+  - npm install coffee-script --global
+deploy:
+  provider: npm
+  email: i59naga@icloud.com
+  api_key:
+    secure: fuBt/Cwe8jdenO1qRLYy5KcFSemuosGb91DQM1H5XcufriW+nYghau7gibYOPXfXe1jUBuNaK3TOpd64EobZ4HU4C1tglWewD6hK+uFT45iu8XdIA54uQs1ZgMLT2aAjZAwxLKp2UFcbLHR4XSS8u6OYY+OYuW2WIz1boDxDtrg=
